# spright

./: Makefile  meson.build  run.sh
cfg/: 2_fn_intra_node_bf3_dpu.cfg  2_fn_intra_node_themis_host.cfg  example.cfg  online-boutique-multi-nodes.cfg
docker/: Dockerfile  docker.sh
docker/gateway/: Dockerfile
docker/shm_mgr/: Dockerfile
docs/: Docker.md  TROUBLESHOOTING.md
scripts/: example_nginx.conf  run_once_multi_nodes_online_boutique.sh  run_once_single_node_dummy_with_nginx.sh
sigcomm-experiment/env-setup/: 200-k8s_install.sh  201-taint_nodes.sh
sigcomm-experiment/expt-1-online-boutique/load-generator/: spright-locustfile.py
src/: gateway.c  io_helper.c  io_sk_msg.c  io_socket.c  shm_mgr.c  sk_nf.c  utility.c
src/include/: io.h  utility.h
